--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+                </dependency>
+                
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -72,27 +81,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-dependency-plugin</artifactId>
-                            <version>3.0.2</version>
-                            <executions>
-                                <execution>
-                                    <phase>package</phase>
-                                    <goals><goal>copy</goal></goals>
-                                    <configuration>
-                                        <artifactItems>
-                                            <artifactItem>
-                                                <groupId>com.github.jsimone</groupId>
-                                                <artifactId>webapp-runner</artifactId>
-                                                <version>8.5.31.0</version>
-                                                <destFileName>webapp-runner.jar</destFileName>
-                                            </artifactItem>
-                                        </artifactItems>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
 		</plugins>
 	</build>
 
