--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://boc6ypknqesnckhggeol-mysql.services.clever-cloud.com:3306/boc6ypknqesnckhggeol?zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=uob59fifyyb9olfi
 spring.datasource.password=yuGaHw1z13vLaVA3NjgZ
+server.port=${PORT:5000}
