--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://boc6ypknqesnckhggeol-mysql.services.clever-cl
 spring.datasource.username=uob59fifyyb9olfi
 spring.datasource.password=yuGaHw1z13vLaVA3NjgZ
 server.port=${PORT:5000}
+spring.jackson.serialization.fail-on-empty-beans=false
