empezando ultimos cambios

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -20,8 +20,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+                </dependency>
+                
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -74,22 +83,21 @@
 			</plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <source>1.8</source>
+                                <target>1.8</target>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-dependency-plugin</artifactId>
-                            <version>3.0.2</version>
+                            <version>3.0.1</version>
                             <executions>
                                 <execution>
+                                    <id>copy-dependencies</id>
                                     <phase>package</phase>
-                                    <goals><goal>copy</goal></goals>
-                                    <configuration>
-                                        <artifactItems>
-                                            <artifactItem>
-                                                <groupId>com.github.jsimone</groupId>
-                                                <artifactId>webapp-runner</artifactId>
-                                                <version>8.5.31.0</version>
-                                                <destFileName>webapp-runner.jar</destFileName>
-                                            </artifactItem>
-                                        </artifactItems>
-                                    </configuration>
+                                    <goals><goal>copy-dependencies</goal></goals>
                                 </execution>
                             </executions>
                         </plugin>
