--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create , esto reinicia la tabla (ver documentacion para entender)
+spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.url=jdbc:mysql://boc6ypknqesnckhggeol-mysql.services.clever-cloud.com:3306/boc6ypknqesnckhggeol?zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=uob59fifyyb9olfi
 spring.datasource.password=yuGaHw1z13vLaVA3NjgZ
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=${PORT:5000}
+spring.jackson.serialization.fail-on-empty-beans=false
